feat: setup firebase admin and sync fcmToken on mobile login
